--- a/hw1/hw_server/search_engine/templates/search_engine/upload_file_abstract.html
+++ b/hw1/hw_server/search_engine/templates/search_engine/upload_file_abstract.html
@@ -147,29 +147,10 @@
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% comment %} <div class="form-label-group"> {% endcomment %}
-                        {% crispy form %}
+                    {% crispy form %}
                     {% comment %} </div> {% endcomment %}
-                    <br>
-                    <button type="submit" class="btn btn-primary">Upload</button>
+                    {% comment %} <button type="submit" class="btn btn-primary">Upload</button> {% endcomment %}
                 </form>
-                {% comment %} <form>
-                    <div class="form-label-group">
-                    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                    <label for="inputEmail">Email address</label>
-                    </div>
-                    <div class="form-label-group">
-                    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                    <label for="inputPassword">Password</label>
-                    </div>
-
-                    <div class="custom-control custom-checkbox mb-3">
-                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                    <label class="custom-control-label" for="customCheck1">Remember password</label>
-                    </div>
-                    <button class="btn btn-lg btn-primary btn-block btn-login text-uppercase font-weight-bold mb-2" type="submit">Sign in</button>
-                    <div class="text-center">
-                    <a class="small" href="#">Forgot password?</a></div>
-                </form>  {% endcomment %}
                 </div>
             </div>
             </div>
