--- a/hw2/hw_server/search_engine/templates/search_engine/chart.html
+++ b/hw2/hw_server/search_engine/templates/search_engine/chart.html
@@ -15,121 +15,182 @@
 	<script src={% static "js/chart.js" %}></script>
 	<script src={% static "js/chart_utils.js" %}></script>
 
-		<style>
-	canvas {
-		-moz-user-select: none;
-		-webkit-user-select: none;
-		-ms-user-select: none;
-	}
+	<link rel="stylesheet" href="{% static 'css/page_theme.css' %}">
+	<style src={% static "css/page_theme.css" %}></style>
+
+	<style>
+		canvas {
+			-moz-user-select: none;
+			-webkit-user-select: none;
+			-ms-user-select: none;
+		}
 	</style>
+
 
 </head>
 <body>
-	<div style="width:75%">
-		<canvas id="canvas"></canvas>
-	</div>
-	<button id="randomizeData">Randomize Data</button>
-	<script>
-		var color = Chart.helpers.color;
-		var top_freq = {{ top_freq|escapejs}}
-		var other_freq = {{ other_freq|escapejs }}
+	{% comment %} background below {% endcomment %}
+	<nav class="navbar navbar-expand navbar-dark bg-primary"> <a href="#menu-toggle" id="menu-toggle" class="navbar-brand"><span class="navbar-toggler-icon"></span></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+		<div class="collapse navbar-collapse" id="navbarsExample02">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+				<li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
+			</ul>
+			<form class="form-inline my-2 my-md-0"> </form>
+		</div>
+	</nav>
+	<div id="wrapper" class="toggled">
+		<!-- Sidebar -->
+		<div id="sidebar-wrapper">
+			<ul class="sidebar-nav">
+				<li class="sidebar-brand"> <a href="#"> Start Bootstrap </a> </li>
+				<li> <a href="#">Dashboard</a> </li>
+				<li> <a href="#">Shortcuts</a> </li>
+				<li> <a href="#">Overview</a> </li>
+				<li> <a href="#">Events</a> </li>
+				<li> <a href="#">About</a> </li>
+				<li> <a href="#">Services</a> </li>
+				<li> <a href="#">Contact</a> </li>
+			</ul>
+		</div> <!-- /#sidebar-wrapper -->
+		<!-- Page Content -->
+		{% comment %} Make sure to keep all page content within the #page-content-wrapper {% endcomment %}
+		<div id="page-content-wrapper">
+			<div class="container-fluid">
+				<h1>Zipf Chart</h1>
+				{% comment %} chart below {% endcomment %}
+				<div style="width:75%">
+					<canvas id="canvas"></canvas>
+				</div>
+				<button id="randomizeData">Randomize Data</button>
+				<script>
+					var color = Chart.helpers.color;
+					var top_freq = {{ top_freq|escapejs}}
+					var other_freq = {{ other_freq|escapejs }}
 
-		function generateData(par) {
-			var data = [];
-			
-			data.push({
-				x: par,
-				y: top_freq[par]
-			});
-			
-			return data;
-		}
-		
-		function generateOtherData() {
-			var data = [];
-			
-			for (var i = 0; i < 1000; i++){
-				data.push({
-					x: i+100,
-					y: other_freq[i]
-				});
-			}
-			return data;
-			
-		}
-		
-		function getDataSet() {
-			var dataset = [];
-			for (var i = 0; i < 100 ; i++){
-				dataset.push({label: i,
+					function generateData(par) {
+						var data = [];
+						
+						data.push({
+							x: par,
+							y: top_freq[par]
+						});
+						
+						return data;
+					}
+					
+					function generateOtherData() {
+						var data = [];
+						
+						for (var i = 0; i < 1000; i++){
+							data.push({
+								x: i+100,
+								y: other_freq[i]
+							});
+						}
+						return data;
+						
+					}
+					
+					function getDataSet() {
+						var dataset = [];
+						for (var i = 0; i < 100 ; i++){
+							dataset.push({label: i,
+										backgroundColor: getRandomColor(),
+										data: generateData(i)})
+						}
+						
+						dataset.push({label: "other",
 							backgroundColor: getRandomColor(),
-							data: generateData(i)})
-			}
-			
-			dataset.push({label: "other",
-				backgroundColor: getRandomColor(),
-				data: generateOtherData() })
-			return dataset;
-		}
-		
-		function getRandomColor() {
-			var letters = '0123456789ABCDEF'.split('');
-			var color = '#';
-			for (var i = 0; i < 6; i++ ) {
-				color += letters[Math.floor(Math.random() * 16)];
-			}
-			return color;
-		}
-		
+							data: generateOtherData() })
+						return dataset;
+					}
+					
+					function getRandomColor() {
+						var letters = '0123456789ABCDEF'.split('');
+						var color = '#';
+						for (var i = 0; i < 6; i++ ) {
+							color += letters[Math.floor(Math.random() * 16)];
+						}
+						return color;
+					}
+					
 
-		var scatterChartData = {
-			datasets : getDataSet(),
-		};
-
-		window.onload = function() {
-			var ctx = document.getElementById('canvas').getContext('2d');
-			window.myScatter = Chart.Scatter(ctx, {
-				data: scatterChartData,
-				options: {
-					title: {
-						display: true,
-						text: 'Chart.js Scatter Chart'
-					},
-				}
-			});
-		};
-
-		document.getElementById('randomizeData').addEventListener('click', function() {
-			scatterChartData.datasets.forEach(function(dataset) {
-				dataset.data = dataset.data.map(function() {
-					return {
-						x: randomScalingFactor(),
-						y: randomScalingFactor()
+					var scatterChartData = {
+						datasets : getDataSet(),
 					};
-				});
-			});
-			window.myScatter.update();
-		});
-	</script>
 
-	<table class="table">
-		<thead>
-			<tr>
-			<th scope="col">#</th>
-			<th scope="col">Word</th>
-			<th scope="col">Frequency</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for i in top_words %}
-			<tr>
-			<th scope="row">{{ forloop.counter }}</th>
-				<td>{{ i }}</td>
-				<td>{{ top_freq|get_element:forloop.counter0 }}</td>
-			</tr>
-			{% endfor %}
-		</tbody>
-	</table>
-	
+					window.onload = function() {
+						var ctx = document.getElementById('canvas').getContext('2d');
+						window.myScatter = Chart.Scatter(ctx, {
+							data: scatterChartData,
+							options: {
+								title: {
+									display: true,
+									text: 'Chart.js Scatter Chart'
+								},
+							}
+						});
+					};
+
+					document.getElementById('randomizeData').addEventListener('click', function() {
+						scatterChartData.datasets.forEach(function(dataset) {
+							dataset.data = dataset.data.map(function() {
+								return {
+									x: randomScalingFactor(),
+									y: randomScalingFactor()
+								};
+							});
+						});
+						window.myScatter.update();
+					});
+				</script>
+				{% comment %} chart above {% endcomment %}
+
+				{% comment %} table below {% endcomment %}
+				<table class="table">
+					<thead>
+						<tr>
+						<th scope="col">Frequency</th>
+						<th scope="col">Word</th>
+						<th scope="col">#</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for i in top_words %}
+						<tr>
+						<th scope="row">{{ top_freq|get_element:forloop.counter0 }}</th>
+							<td>{{ i }}</td>
+							<td>{{ forloop.counter }}</td>
+						</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+				{% comment %} table above {% endcomment %}
+			</div>
+		</div> <!-- /#page-content-wrapper -->
+	</div> <!-- /#wrapper -->
+	<!-- Bootstrap core JavaScript -->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.bundle.min.js"></script> <!-- Menu Toggle Script -->
+	<script>
+		$(function(){
+		$("#menu-toggle").click(function(e) {
+			e.preventDefault();
+			$("#wrapper").toggleClass("toggled");
+		});
+
+		$(window).resize(function(e) {
+			if($(window).width()<=768){
+			$("#wrapper").removeClass("toggled");
+			}else{
+			$("#wrapper").addClass("toggled");
+			}
+		});
+		});
+		
+	</script>
+	{% comment %} background above {% endcomment %}
+
 </body>
 </html>
