Add api calculate stemmed words' frequency

--- a/hw2/hw_server/search_engine/templates/search_engine/chart.html
+++ b/hw2/hw_server/search_engine/templates/search_engine/chart.html
@@ -57,7 +57,7 @@
 		{% comment %} Make sure to keep all page content within the #page-content-wrapper {% endcomment %}
 		<div id="page-content-wrapper">
 			<div class="container-fluid">
-				<h1>Zipf Chart</h1>
+				<h1>Covid-19 Origin Zipf Chart</h1>
 				{% comment %} chart below {% endcomment %}
 				<div style="width:75%">
 					<canvas id="canvas"></canvas>
