--- a/hw2/hw_server/search_engine/templates/search_engine/chart.html
+++ b/hw2/hw_server/search_engine/templates/search_engine/chart.html
@@ -42,9 +42,9 @@
 		<!-- Sidebar -->
 		<div id="sidebar-wrapper">
 			<ul class="sidebar-nav">
-				<li class="sidebar-brand"> <a href="{% url 'zipf' opt=1%}"> Show All </a> </li>
-				<li> <a href="{% url 'zipf' opt=2%}">COVID19_origin</a> </li>
-				<li> <a href="{% url 'zipf' opt=3%}">COVID19_stem</a> </li>
+				<li class="sidebar-brand"> <a href="{% url 'zipf' opt=9%}"> Show All </a> </li>
+				<li> <a href="{% url 'zipf' opt=0%}">COVID19_origin</a> </li>
+				<li> <a href="{% url 'zipf' opt=1%}">COVID19_stem</a> </li>
 				<li> <a href="{% url 'zipf' opt=4%}">COVID19</a> </li>
 				<li> <a href="{% url 'zipf' opt=5%}">COVID19</a> </li>
 			</ul>
@@ -53,7 +53,7 @@
 		{% comment %} Make sure to keep all page content within the #page-content-wrapper {% endcomment %}
 		<div id="page-content-wrapper">
 			<div class="container-fluid">
-				<h1>Covid-19 Origin Zipf Chart</h1>
+				<h1>{{ title }}</h1>
 				{% comment %} chart below {% endcomment %}
 				<div style="width:75%">
 					<canvas id="canvas"></canvas>
