Add predefined subset in homepage

--- a/hw2/hw_server/search_engine/templates/search_engine/chart.html
+++ b/hw2/hw_server/search_engine/templates/search_engine/chart.html
@@ -47,7 +47,8 @@
 				<li> <a href="{% url 'zipf' opt=0%}">COVID19_origin</a> </li>
 				<li> <a href="{% url 'zipf' opt=1%}">COVID19_stem</a> </li>
 				<li> <a href="{% url 'zipf' opt=2%}">COVID19_Both</a> </li>
-				<li> <a href="{% url 'zipf' opt=5%}">COVID19</a> </li>
+				<li> <a href="{% url 'zipf_search' subset=0%}">COVID19_mask</a> </li>
+				<li> <a href="{% url 'zipf_search' subset=1%}">COVID19_2005</a> </li>
 			</ul>
 		</div> <!-- /#sidebar-wrapper -->
 		<!-- Page Content -->
