--- a/hw2/hw_server/search_engine/templates/search_engine/chart_search.html
+++ b/hw2/hw_server/search_engine/templates/search_engine/chart_search.html
@@ -63,7 +63,7 @@
 			</form>
 			{% comment %} end search_bar {% endcomment %}
 			<div class="container-fluid">
-				<h1>{{ char_title }}</h1>
+				<h1>Covid-19 and "{{ chart_title }}" subset Zipf Chart</h1>
 				{% comment %} chart below {% endcomment %}
 				<div style="width:75%">
 					<canvas id="canvas"></canvas>
