--- a/hw2/hw_server/search_engine/templates/search_engine/chart.html
+++ b/hw2/hw_server/search_engine/templates/search_engine/chart.html
@@ -194,8 +194,8 @@
 
 				{% comment %} table below {% endcomment %}
 				{% if not freq|check_empty %}
-				<table class="table">
-					<thead>
+				<table class="table table-striped">
+					<thead class="thead-dark">
 						<tr>
 						<th scope="col">Frequency</th>
 						<th scope="col">Word</th>
@@ -216,8 +216,8 @@
 				{% comment %} table above {% endcomment %}
 				{% comment %} table below {% endcomment %}
 				{% if freq|check_empty %}
-				<table class="table">
-					<thead>
+				<table class="table table-striped table-bordered">
+					<thead class="thead-dark">
 						<tr>
 						<th scope="col">Frequency after stemming</th>
 						<th scope="col">Stem Word</th>
