--- a/hw2/hw_server/search_engine/templates/search_engine/chart.html
+++ b/hw2/hw_server/search_engine/templates/search_engine/chart.html
@@ -67,7 +67,7 @@
 				<div style="width:75%">
 					<canvas id="canvas"></canvas>
 				</div>
-				<button id="randomizeData">Randomize Data</button>
+				{% comment %} <button id="randomizeData">Randomize Data</button> {% endcomment %}
 				<script>
 					var color = Chart.helpers.color;
 					var title = "{{title|escapejs}}";
