--- a/hw2/hw_server/search_engine/templates/search_engine/chart.html
+++ b/hw2/hw_server/search_engine/templates/search_engine/chart.html
@@ -51,6 +51,22 @@
 				<li> <a href="{% url 'zipf_search' subset=1%}">COVID19_2005</a> </li>
 			</ul>
 		</div> <!-- /#sidebar-wrapper -->
+		{% comment %} radio buttons {% endcomment %}
+		<br>
+		<div class="btn-group btn-group-toggle" data-toggle="buttons">
+			<div class="radio buttons">
+				<label class="btn btn-secondary">
+					<input type="radio" name="options" id="option2" autocomplete="off" checked onclick="openClass('container_table')"> Frequency Table
+				</label>
+				<label class="btn btn-secondary active">
+					<input type="radio" name="options" id="option1" autocomplete="off" checked onclick="openClass('canvas')"> Zipf Chart
+				</label>
+				<label class="btn btn-secondary active">
+					<input type="radio" name="options" id="option1" autocomplete="off" checked onclick="openClass('both')"> Both
+				</label>
+			</div>
+		</div>
+		{% comment %} radio buttons end {% endcomment %}
 		<!-- Page Content -->
 		{% comment %} Make sure to keep all page content within the #page-content-wrapper {% endcomment %}
 		<div id="page-content-wrapper">
@@ -62,10 +78,10 @@
 			</form>
 			{% comment %} end search bar {% endcomment %}
 			<div class="container-fluid">
-				<h1>Covid-19 {{ title }} Zipf Chart</h1>
+				<h1 class="container" id="chart_title">Covid-19 {{ title }} Zipf Chart</h1>
 				{% comment %} chart below {% endcomment %}
 				<div style="width:75%">
-					<canvas id="canvas"></canvas>
+					<canvas id="canvas" class="container canvas"></canvas>
 				</div>
 				{% comment %} <button id="randomizeData">Randomize Data</button> {% endcomment %}
 				<script>
@@ -178,7 +194,30 @@
 						}
 					};
 
-					document.getElementById('randomizeData').addEventListener('click', function() {
+					{% comment %} this function listens radio buttons to switch tab {% endcomment %}
+					function openClass(className) {
+						var i, x;
+						// get class="container" in page
+						x = document.getElementsByClassName("container");
+						//for all x class="container"  => display:none (hide show)
+						for (i = 0; i < x.length; i++) {
+							x[i].style.display = "none";
+						}
+						if (className.localeCompare('both') == 0) {
+							document.getElementById("canvas").style.display = "block";
+							document.getElementById("container_table").style.display = "table";
+							document.getElementById("chart_title").style.display = "block";
+						} 
+						//show only clicked content
+						else if (className.localeCompare('container_table') == 0) {
+							document.getElementById(className).style.display = "table";
+						} else {
+  							document.getElementById(className).style.display = "block";
+							document.getElementById("chart_title").style.display = "block";
+						}
+					}
+
+					{% comment %} document.getElementById('option1').addEventListener('click', function() {
 						scatterChartData.datasets.forEach(function(dataset) {
 							dataset.data = dataset.data.map(function() {
 								return {
@@ -188,13 +227,14 @@
 							});
 						});
 						window.myScatter.update();
-					});
+					}); {% endcomment %}
 				</script>
 				{% comment %} chart above {% endcomment %}
+				<br>
 
 				{% comment %} table below {% endcomment %}
 				{% if not freq|check_empty %}
-				<table class="table table-striped">
+				<table class="table table-striped container" id="container_table">
 					<thead class="thead-dark">
 						<tr>
 						<th scope="col">Frequency</th>
@@ -216,7 +256,7 @@
 				{% comment %} table above {% endcomment %}
 				{% comment %} table below {% endcomment %}
 				{% if freq|check_empty %}
-				<table class="table table-striped table-bordered">
+				<table class="table table-striped table-bordered container" id="container_table">
 					<thead class="thead-dark">
 						<tr>
 						<th scope="col">Frequency after stemming</th>
